# SocorroAutomotivo

./: .env.example  .gitignore  db.sqlite3  manage.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py  wsgi.py
auto/: admin.py  urls.py  views.py
auto/migrations/: 0001_initial.py
auto/static/css/base/: base.css  base.css.map  base.sass
auto/static/css/index/: index.css  index.css.map  index.sass
auto/static/css/servicos/: servicos.css
auto/static/css/solicitar_socorro/: solicitar_socorro.css  solicitar_socorro.css.map  solicitar_socorro.sass
auto/static/js/index/: index.js
auto/templates/: base.html  chaveiro_automotivo.html  falta_combustivel.html  guincho.html  index.html  pane_mecanica.html  recarga_bateria.html  socorrista_encontrado.html  solicitar_chaveiro_automotivo.html  solicitar_falta_combustivel.html  solicitar_guincho.html  solicitar_pane_mecanica.html  solicitar_recarga_bateria.html  solicitar_socorro.html  solicitar_troca_pneu.html  troca_pneu.html
socorroauto/: asgi.py  settings.py  urls.py  wsgi.py
