[project]
name = "socorro-automotivo"
version = "0.1.0"
description = "Projeto Django para socorro automotivo"
requires-python = ">=3.12"
dependencies = [
    "Django==6.0.3",
    "pillow==12.1.1",
    "whitenoise==6.12.0",
]

[project.scripts]
app = "api.wsgi:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
